ui-rag/deployment.yaml
# Creating MLflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codification-ape-rag-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codification-ape-rag-ui
  template:
    metadata:
      labels:
        app: codification-ape-rag-ui
    spec:
      containers:
        - name: codif-ape-rag-ui
          image: meilametayebjee/codification-ape-graph-rag-streamlit:v0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8501
          resources:
            limits:
              cpu: 30000m
              memory: 50Gi
            requests:
              cpu: 100m
              memory: 1Gi
