ui-rag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codification-ape-rag-ui-service
spec:
  type: ClusterIP
  ports:
    - port: 8501
      targetPort: 8501
      protocol: TCP
      name: http
  selector:
    app: codification-ape-rag-ui
